--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/AF-Favicon-WB-16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="AutoFlow used vehicle inventory management" />
+  <meta name="description" content="AutoApp used vehicle inventory management" />
   <script>
     // See https://github.com/facebook/react/issues/20829#issuecomment-802088260
     if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
   </script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>AutoFlow</title>
+  <title>AutoApp</title>
 </head>
 
 <body>
