--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
   </script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>AutoApp</title>
+  <title>Auto Inventory Flow</title>
 </head>
 
 <body>
